Fall 2017, add LK version

--- a/cover-lulu-quarto.tex
+++ b/cover-lulu-quarto.tex
@@ -72,7 +72,7 @@
 \noindent\hfil\rotatebox{-90}{% make spine text readable when book is lying cover up
       \hbox to \coverheight{\hfil
           \huge\sffamily\bfseries\color{black}
-            Sets, Logic, Computation\hfil W17\hspace{1cm}}}\hfil
+            Sets, Logic, Computation\hfil F17\hspace{1cm}}}\hfil
 \end{textblock*}
 \newbox\adjust
 % make front cover
@@ -91,7 +91,7 @@
     \par\noindent
     \vskip 2cm
     \normalfont\fontsize{18pt}{0pt}\selectfont\bfseries\sffamily%
-    \hfill Winter 2017 
+    \hfill Fall 2017 
   \end{minipage}
   \hfil
   \end{textblock*}
