--- a/include/preface.tex
+++ b/include/preface.tex
@@ -92,28 +92,28 @@ also really the kind of result that any self-respecting mathematician,
 computer scientist, or philosopher should know.
 
 In the second part we turn to first-order logic. We will define the
-language of first-order logic and its semantics, i.e., what first-order
-structures are and when a sentence of first-order logic is true in a
-structure. This will enable us to do two important things: (1) We can
-define, with mathematical precision, when a sentence is a logical
-consequence of another. (2) We can also consider how the relations
-that make up a first-order structure are
+language of first-order logic and its semantics, i.e., what
+first-order structures are and when a sentence of first-order logic is
+true in a structure. This will enable us to do two important things:
+(1) We can define, with mathematical precision, when a sentence is a
+logical consequence of another. (2) We can also consider how the
+relations that make up a first-order structure are
 described---characterized---by the sentences that are true in them.
 This in particular leads us to a discussion of the axiomatic method,
 in which sentences of first-order languages are used to characterize
 certain kinds of structures. Proof theory will occupy us next, and we
-will consider the original version of natural deduction as defined in
-the 1930s by Gerhard Gentzen. The semantic notion of consequence and
-the syntactic notion of provability give us two completely different
-ways to make precise the idea that a sentence may follow from some
-others. The soundness and completeness theorems link these two
-characterization. In particular, we will prove G\"odel's completeness
-theorem, which states that whenever a sentence is a semantic
-consequence of some others, there is also a deduction of said sentence
-from these others. An equivalent formulation is: if a collection of
-sentences is consistent---in the sense that nothing contradictory can
-be proved from them---then there is a structure that makes all of them
-true.
+will consider the original version of \iftag{prfSC}{the sequent
+  calculus}{natural deduction} as defined in the 1930s by Gerhard
+Gentzen. The semantic notion of consequence and the syntactic notion
+of provability give us two completely different ways to make precise
+the idea that a sentence may follow from some others. The soundness
+and completeness theorems link these two characterization. In
+particular, we will prove G\"odel's completeness theorem, which states
+that whenever a sentence is a semantic consequence of some others,
+there is also a deduction of said sentence from these others. An
+equivalent formulation is: if a collection of sentences is
+consistent---in the sense that nothing contradictory can be proved
+from them---then there is a structure that makes all of them true.
 
 The second formulation of the completeness theorem is perhaps the more
 surprising. Around the time G\"odel proved this result (in 1929), the
