--- a/phil379-screen.tex
+++ b/phil379-screen.tex
@@ -166,7 +166,7 @@
 \par\noindent
 \vskip 1.5cm
 \normalfont\fontsize{16pt}{0pt}\selectfont\bfseries\sffamily%
-\hfill Winter 2017 %\textit{bis}
+\hfill Fall 2017 %\textit{bis}
 \end{textblock*}
 \
 
