--- a/include/summary-7.tex
+++ b/include/summary-7.tex
@@ -1,31 +1,50 @@
 \emph{Proof systems} provide purely syntactic methods for
 characterizing consequence and compatibility between sentences.
-\emph{Natural deduction} is one such proof system. A \emph{derivation}
-in it consists of a tree of formulas. The topmost formula a derivation
-are \emph{assumptions}. All other formulas, for the derivation to be
-correct, must be correctly justified by one of a number of
-\emph{inference rules}. These come in pairs; an introduction and an
-elimination rule for each connective and quantifier. For instance, if
-a formula~$!A$ is justified by a $\Elim{\lif}$ rule, the preceding
-formulas (the \emph{premises}) must be $!B \lif !A$ and $!B$ (for
-some~$!B$). Some inference rules also allow assumptions to be
-\emph{discharged}. For instance, if $!A \lif !B$ is inferred from $!B$
-using $\Intro{\lif}$, any occurrences of~$!A$ as assumptions in the
-derivation leading to the premise~$!B$ may be discharged, given a
-label that is also recorded at the inference.
+\iftag{prfND}{\emph{Natural deduction}}{The \emph{sequent calculus}}
+is one such proof system. A \emph{derivation} in it consists of a tree
+of \iftag{prfND}{formulas}{sequents (a sequent $\Gamma \Sequent
+  \Delta$ consists of two sequences of formulas separated
+  by~$\Sequent$)}. The topmost \iftag{prfND}{formulas}{sequents} in a
+derivation are \iftag{prfND}{\emph{assumptions}}{\emph{initial
+    sequents} of the form $!A \Sequent !A$}.  All other
+\iftag{prfND}{formulas}{sequents}, for the derivation to be correct,
+must be correctly justified by one of a number of \emph{inference
+  rules}. These come in pairs; \iftag{prfND}{an introduction and an
+  elimination rule }{a rule for operating on the left and on the right
+  side of a sequent} for each connective and quantifier. For instance,
+\iftag{prfND}{if a formula~$!A$ is justified by a $\Elim{\lif}$ rule,
+  the preceding formulas (the \emph{premises}) must be $!B \lif !A$
+  and $!B$ (for some~$!B$). Some inference rules also allow
+  assumptions to be \emph{discharged}. For instance, if $!A \lif !B$
+  is inferred from $!B$ using $\Intro{\lif}$, any occurrences of~$!A$
+  as assumptions in the derivation leading to the premise~$!B$ may be
+  discharged, given a label that is also recorded at the
+  inference.}{if a sequent $\Gamma \Sequent \Delta, !A \lif !B$ is
+  justified by the $\RightR{\lif}$ rule, the preceding sequent (the
+  \emph{premise}) must be $!A, \Gamma \Sequent \Delta, !B$. Some rules
+  also allow the order or number of sentences in a sequent to be
+  manipulated, e.g., the \RightR{\Exchange} rule allows two formulas
+  on the right side of a sequent to be switched.}
 
-If there is a derivation with end formula~$!A$ and all assumptions are
-discharged, we say $!A$ is a theorem and write~$\Proves !A$. If all
-undischarged assumptions are in some set~$\Gamma$, we say $!A$ is
+If there is a derivation \iftag{prfND}{with end formula~$!A$ and all
+  assumptions are discharged}{of the sequent $\quad \Sequent !A$}, we
+say $!A$ is a \emph{theorem} and write~$\Proves !A$. If
+\iftag{prfND}{all undischarged assumptions are in some
+  set~$\Gamma$}{there is a derivation of $\Gamma_0 \Sequent !A$ where
+  every $!B$ in $\Gamma_0$ is in~$\Gamma$}, we say $!A$ is
 \emph{derivable from}~$\Gamma$ and write $\Gamma \Proves !A$. If
-$\Gamma \Proves \lfalse$ we say $\Gamma$ is \emph{inconsistent},
-otherwise \emph{consistent}. These notions are interrelated, e.g.,
-$\Gamma \Proves !A$ iff $\Gamma \cup \{\lnot !A\} \Proves
-\lfalse$. They are also related to the corresponding semantic notions,
-e.g., if $\Gamma \Proves !A$ then $\Gamma \Entails !A$. This property
-of natural deduction---what can be derived from $\Gamma$ is guaranteed
-to be entailed by~$\Gamma$---is called \emph{soundness}. The
-\emph{soundness theorem} is proved by induction on the length of
-derivations, showing that each individual inference preserves
-entailment of its conclusion from open assumptions provided its premises are
-entailed by their open assumptions.
+\iftag{prfND}{$\Gamma \Proves \lfalse$}{there is a derivation of
+  $\Gamma_0 \Sequent \quad$ where every $!B$ in $\Gamma_0$ is
+  in~$\Gamma$} we say $\Gamma$ is \emph{inconsistent}, otherwise
+\emph{consistent}. These notions are interrelated, e.g., $\Gamma
+\Proves !A$ iff $\Gamma \cup \{\lnot !A\}$ is inconsistent. They are
+also related to the corresponding semantic notions, e.g., if $\Gamma
+\Proves !A$ then $\Gamma \Entails !A$. This property of proof
+systems---what can be derived from $\Gamma$ is guaranteed to be
+entailed by~$\Gamma$---is called \emph{soundness}. The \emph{soundness
+  theorem} is proved by induction on the length of derivations,
+showing that each individual inference preserves
+\iftag{prfND}{entailment of its conclusion from open assumptions
+  provided its premises are entailed by their open
+  assumptions}{validity of the conclusion sequent provided the premise
+  sequents are valid}.
