--- a/include/glossary.tex
+++ b/include/glossary.tex
@@ -257,14 +257,14 @@
     \olref[fol][com][com]{sec})} }
 
 \newglossaryentry{mcs} {
-  name=maximally consistent set,  
-  description={A set of {sentence}s is maximally consistent iff it
-    is consistent, and adding any {sentence} to it makes it
-    inconsistent (see \olref[fol][com][mcs]{sec})} }
+  name=complete consistent set,
+  description={A set of {sentence}s is complete and consistent iff it
+    is consistent, and for every {sentence}~$!A$ either $!A$ or
+    $\lnot !A$ is in the set (see \olref[fol][com][ccs]{sec})} }
 
 \newglossaryentry{mos} {
   name=model,  
-  description={ A {structure} in which every {sentence}
+  description={A {structure} in which every {sentence}
     in~$\Gamma$ is true is a model of~$\Gamma$ (see
     \olref[fol][mat][exs]{sec})} }
 
@@ -275,6 +275,7 @@
     $\Setabs{!A}{\Gamma \Entails !A}$ is the closure of~$\Gamma$ (see
     \olref[fol][mat][int]{sec})} }
 
+\iftag{prfND}{
 \newglossaryentry{derivability} {
   name=derivability,
   symbol = {\ensuremath{\Gamma \Proves !A}},  
@@ -299,15 +300,86 @@
 
 \newglossaryentry{derivation} {
   name=derivation,  
-  description={A tree of formulas in which every formua is either an
-    assumption or follows from the trees above it by a rule of
+  description={A tree of formulas in which every formula is either an
+    assumption or follows from the formulas immediately above it by a rule of
     inference (see \olref[fol][ntd][rul]{sec})} }
+
+\newglossaryentry{eigenvariable}{
+  name = eigenvariable,  
+  description = {A special constant symbol in a premise of a
+    $\Elim{\lexists}$ or $\Intro{\lforall}$ inference which may not
+    appear in the conclusion or any \gls{undischarged} (see
+    \olref[fol][ntd][rul]{sec})}}
+
+\newglossaryentry{discharged}{
+  name = {discharged},
+  description = {An \gls{assumption} in a derivation may be discharged
+    by an inference rule below it (the rule and the assumption are
+    then assigned a matching label, e.g., $[!A]^2$). If it is not
+    discharged, it is called undischarged (see \olref[fol][ntd][rul]{sec})}}
+
+\newglossaryentry{undischarged}{
+  name = {undischarged},
+  description = {see \gls{discharged}}}
+
+\newglossaryentry{assumption}{
+  name = {assumption},
+  description = {A formula that stands topmost in a derivation, also
+    called an initial formula. It may be \gls{discharged} or
+    undischarged (see \olref[fol][ntd][rul]{sec})}}
 
 \newglossaryentry{soundness} {
   name=soundness, 
   description={Property of a proof system: it is sound if whenever
     $\Gamma \Proves !A$ then $\Gamma \Entails !A$ (see
     \olref[fol][ntd][sou]{sec})} }
+
+}{
+\newglossaryentry{sequent}{
+  name=sequent,
+  description = {An expression of the form $\Gamma \Sequent \Delta$ where $\Gamma$ and $\Delta$ are finite sequences of sentences (see \olref[fol][seq][rul]{sec})} }
+
+
+\newglossaryentry{derivability} {
+  name=derivability,
+  symbol = {\ensuremath{\Gamma \Proves !A}},  
+  description={$!A$ is {derivable} from~$\Gamma$ if there is a
+    \gls{derivation} of a sequent $\Gamma_0 \Sequent !A$ 
+    where $\Gamma_0 \subseteq \Gamma$ is a finite sequence of sentences in~$\Gamma$ (see
+    \olref[fol][seq][ptn]{sec})} }
+
+\newglossaryentry{theorem} {
+  name={theorem},
+  symbol = {\ensuremath{\Proves !A}},
+  description={A {formula}~$!A$ is a theorem (of logic) if there is
+    a {derivation} of the sequent $\Sequent !A$; or a
+    theorem of~$\Gamma$ if $\Gamma \Proves !A$ (see
+    \olref[fol][seq][ptn]{sec})} }
+
+\newglossaryentry{consistent} {
+  name=consistent,
+  description={A set of sentences~$\Gamma$ is consistent iff there is no \gls{derivation} of a \gls{sequent} $\Gamma_0 \Sequent \quad$ with $\Gamma_0 \subseteq \Gamma$, otherwise inconsistent (see
+    \olref[fol][seq][ptn]{sec})} }
+
+\newglossaryentry{derivation} {
+  name=derivation,  
+  description={A tree of sequents in which every sequent is either an initial sequent or follows from the sequents immediately above it by a rule of
+    inference (see \olref[fol][seq][rul]{sec})} }
+
+\newglossaryentry{eigenvariable}{
+  name = eigenvariable,  
+  description = {A special constant symbol in a premise of a
+    $\LeftR{\lexists}$ or $\RightR{\lforall}$ inference which may not
+    appear in the conclusion (see
+    \olref[fol][seq][rul]{sec})}}
+
+\newglossaryentry{soundness} {
+  name=soundness, 
+  description={Property of a proof system: it is sound if whenever
+    $\Gamma \Proves !A$ then $\Gamma \Entails !A$ (see
+    \olref[fol][seq][sou]{sec})} }
+}
+
 
 \newglossaryentry{sentence} {
   name=sentence,  
@@ -446,27 +518,4 @@
   description = {States that first-order logic is complete: every
     \gls{consistent} set of sentences is \gls{satisfiable}}}
 
-\newglossaryentry{eigenvariable}{
-  name = eigenvariable,  
-  description = {A special constant symbol in a premise of a
-    $\Elim{\lexists}$ or $\Intro{\lforall}$ inference which may not
-    appear in the conclusion or any \gls{undischarged} (see
-    \olref[fol][ntd][rul]{sec})}}
-
-\newglossaryentry{discharged}{
-  name = {discharged},
-  description = {An \gls{assumption} in a derivation may be discharged
-    by an inference rule below it (the rule and the assumption are
-    then assigned a matching label, e.g., $[!A]^2$). If it is not
-    discharged, it is called undischarged (see \olref[fol][ntd][rul]{sec})}}
-
-\newglossaryentry{undischarged}{
-  name = {undischarged},
-  description = {see \gls{discharged}}}
-
-\newglossaryentry{assumption}{
-  name = {assumption},
-  description = {A formula that stands topmost in a derivation, also
-    called an initial formula. It may be \gls{discharged} or
-    undischarged (see \olref[fol][ntd][rul]{sec})}}
 
