add both sequent calculus and natural deduction because why not?

--- a/include/glossary.tex
+++ b/include/glossary.tex
@@ -275,11 +275,13 @@
     $\Setabs{!A}{\Gamma \Entails !A}$ is the closure of~$\Gamma$ (see
     \olref[fol][mat][int]{sec})} }
 
-\iftag{prfND}{
 \newglossaryentry{derivability} {
   name=derivability,
   symbol = {\ensuremath{\Gamma \Proves !A}},  
-  description={$!A$ is {derivable} from~$\Gamma$ if there is a
+  description={In the sequent calculus, $!A$ is {derivable} from~$\Gamma$ if there is a
+    \gls{derivation} of a \gls{sequent} $\Gamma_0 \Sequent !A$ 
+    where $\Gamma_0 \subseteq \Gamma$ is a finite sequence of sentences in~$\Gamma$ (see
+    \olref[fol][seq][ptn]{sec}). In natural deduction, $!A$ is {derivable} from~$\Gamma$ if there is a
     {derivation} with end-{formula}~$!A$ and in which every
     assumption is either {discharged} or is in~$\Gamma$ (see
     \olref[fol][ntd][ptn]{sec})} }
@@ -287,28 +289,43 @@
 \newglossaryentry{theorem} {
   name={theorem},
   symbol = {\ensuremath{\Proves !A}},
-  description={A {formula}~$!A$ is a theorem (of logic) if there is
-    a {derivation} of $!A$ with all assumptions \gls{discharged}; or a
-    theorem of~$\Gamma$ if $\Gamma \Proves !A$ (see
-    \olref[fol][ntd][ptn]{sec})} }
+  description={In the sequent calculus, a {formula}~$!A$ is a theorem
+    (of logic) if there is a {derivation} of the sequent $\Sequent !A$
+    (see \olref[fol][seq][ptn]{sec}).  In natural deduction, a
+    {formula}~$!A$ is a theorem if there is a {derivation} of $!A$
+    with all assumptions \gls{discharged}
+    (see \olref[fol][ntd][ptn]{sec}). We also say that $!A$ is a
+    theorem of a theory~$\Gamma$ if $\Gamma \Proves !A$} }
 
 \newglossaryentry{consistent} {
   name=consistent,
-  description={A set of sentences~$\Gamma$ is consistent iff $\Gamma
-    \Proves/ \lfalse$, otherwise inconsistent (see
-    \olref[fol][ntd][ptn]{sec})} }
+  description={In the sequent calculus, a set of sentences~$\Gamma$ is
+    consistent iff there is no \gls{derivation} of a \gls{sequent}
+    $\Gamma_0 \Sequent \quad$ with $\Gamma_0 \subseteq \Gamma$
+    (see \olref[fol][seq][ptn]{sec}). In natural deduction, $\Gamma$
+    is consistent iff $\Gamma \Proves/ \lfalse$
+    (see \olref[fol][ntd][ptn]{sec}). If $\Gamma$ is not consistent,
+    it is inconsistent.} }
+
+\newglossaryentry{inconsistent} {
+  name=inconsistent,
+  description = {see \gls{consistent}}}
 
 \newglossaryentry{derivation} {
   name=derivation,  
-  description={A tree of formulas in which every formula is either an
+  description={In the sequent calculus, a tree of sequents in which every sequent is either an initial sequent or follows from the sequents immediately above it by a rule of
+    inference (see \olref[fol][seq][rul]{sec}). In natural deduction, a tree of formulas in which every formula is either an
     assumption or follows from the formulas immediately above it by a rule of
     inference (see \olref[fol][ntd][rul]{sec})} }
 
 \newglossaryentry{eigenvariable}{
   name = eigenvariable,  
-  description = {A special constant symbol in a premise of a
+  description = {In the sequent calculus, a special constant symbol in a premise of a
+    $\LeftR{\lexists}$ or $\RightR{\lforall}$ inference which may not
+    appear in the conclusion (see
+    \olref[fol][seq][rul]{sec}). In natural deduction, a special constant symbol in a premise of a
     $\Elim{\lexists}$ or $\Intro{\lforall}$ inference which may not
-    appear in the conclusion or any \gls{undischarged} (see
+    appear in the conclusion or any \gls{undischarged} assumption (see
     \olref[fol][ntd][rul]{sec})}}
 
 \newglossaryentry{discharged}{
@@ -332,53 +349,11 @@
   name=soundness, 
   description={Property of a proof system: it is sound if whenever
     $\Gamma \Proves !A$ then $\Gamma \Entails !A$ (see
-    \olref[fol][ntd][sou]{sec})} }
+    \olref[fol][seq][sou]{sec} and \olref[fol][ntd][sou]{sec})} }
 
-}{
 \newglossaryentry{sequent}{
   name=sequent,
   description = {An expression of the form $\Gamma \Sequent \Delta$ where $\Gamma$ and $\Delta$ are finite sequences of sentences (see \olref[fol][seq][rul]{sec})} }
-
-
-\newglossaryentry{derivability} {
-  name=derivability,
-  symbol = {\ensuremath{\Gamma \Proves !A}},  
-  description={$!A$ is {derivable} from~$\Gamma$ if there is a
-    \gls{derivation} of a sequent $\Gamma_0 \Sequent !A$ 
-    where $\Gamma_0 \subseteq \Gamma$ is a finite sequence of sentences in~$\Gamma$ (see
-    \olref[fol][seq][ptn]{sec})} }
-
-\newglossaryentry{theorem} {
-  name={theorem},
-  symbol = {\ensuremath{\Proves !A}},
-  description={A {formula}~$!A$ is a theorem (of logic) if there is
-    a {derivation} of the sequent $\Sequent !A$; or a
-    theorem of~$\Gamma$ if $\Gamma \Proves !A$ (see
-    \olref[fol][seq][ptn]{sec})} }
-
-\newglossaryentry{consistent} {
-  name=consistent,
-  description={A set of sentences~$\Gamma$ is consistent iff there is no \gls{derivation} of a \gls{sequent} $\Gamma_0 \Sequent \quad$ with $\Gamma_0 \subseteq \Gamma$, otherwise inconsistent (see
-    \olref[fol][seq][ptn]{sec})} }
-
-\newglossaryentry{derivation} {
-  name=derivation,  
-  description={A tree of sequents in which every sequent is either an initial sequent or follows from the sequents immediately above it by a rule of
-    inference (see \olref[fol][seq][rul]{sec})} }
-
-\newglossaryentry{eigenvariable}{
-  name = eigenvariable,  
-  description = {A special constant symbol in a premise of a
-    $\LeftR{\lexists}$ or $\RightR{\lforall}$ inference which may not
-    appear in the conclusion (see
-    \olref[fol][seq][rul]{sec})}}
-
-\newglossaryentry{soundness} {
-  name=soundness, 
-  description={Property of a proof system: it is sound if whenever
-    $\Gamma \Proves !A$ then $\Gamma \Entails !A$ (see
-    \olref[fol][seq][sou]{sec})} }
-}
 
 
 \newglossaryentry{sentence} {
@@ -399,7 +374,7 @@
     \olref[fol][syn][sat]{sec})} }
 
 \newglossaryentry{valid} {
-  name=validity,
+  name=valid,
   symbol = {\ensuremath{\Entails !A}},
   description={A sentence $!A$ is \emph{valid}  iff
     $\Sat{M}{!A}$ for every \gls{structure}~$\Struct M$ (see
