--- a/include/preface.tex
+++ b/include/preface.tex
@@ -102,17 +102,18 @@ described---characterized---by the sentences that are true in them.
 This in particular leads us to a discussion of the axiomatic method,
 in which sentences of first-order languages are used to characterize
 certain kinds of structures. Proof theory will occupy us next, and we
-will consider the original version of \iftag{prfSC}{the sequent
-  calculus}{natural deduction} as defined in the 1930s by Gerhard
-Gentzen. The semantic notion of consequence and the syntactic notion
-of provability give us two completely different ways to make precise
-the idea that a sentence may follow from some others. The soundness
-and completeness theorems link these two characterization. In
-particular, we will prove G\"odel's completeness theorem, which states
-that whenever a sentence is a semantic consequence of some others,
-there is also a deduction of said sentence from these others. An
-equivalent formulation is: if a collection of sentences is
-consistent---in the sense that nothing contradictory can be proved
+will consider the original version of the sequent calculus and natural
+deduction as defined in the 1930s by Gerhard Gentzen. (Your instructor
+may choose to cover only one, then any reference to ``derivations''
+and ``provability'' will mean whatever system they chose.) The
+semantic notion of consequence and the syntactic notion of provability
+give us two completely different ways to make precise the idea that a
+sentence may follow from some others. The soundness and completeness
+theorems link these two characterization. In particular, we will prove
+G\"odel's completeness theorem, which states that whenever a sentence
+is a semantic consequence of some others, there it is also provable
+from them. An equivalent formulation is: if a collection of sentences
+is consistent---in the sense that nothing contradictory can be proved
 from them---then there is a structure that makes all of them true.
 
 The second formulation of the completeness theorem is perhaps the more
@@ -163,29 +164,23 @@ finally that Hilbert's ``decision problem'' (for logic) also cannot.
 This text is mathematical, in the sense that we discuss mathematical
 definitions and prove our results mathematically. But it is not
 mathematical in the sense that you need extensive mathematical
-background knowledge. Nothing in this text requires
-knowledge of algebra, trigonometry, or calculus. We have made a
-special effort to also not require any familiarity with the way
-mathematics works: in fact, part of the point is to \emph{develop} the
-kinds of reasoning and proof skills required to understand and prove
-our results. The organization of the text follows mathematical
-convention, for one reason: these conventions have been developed
-because clarity and precision are especially important, and so, e.g.,
-it is critical to know when something is asserted as the conclusion of
-an argument, is offered as a reason for something else, or is intended
-to introduce new vocabulary. So we follow mathematical convention and
-label passages as ``definitions'' if they are used to introduce new
+background knowledge. Nothing in this text requires knowledge of
+algebra, trigonometry, or calculus. We have made a special effort to
+also not require any familiarity with the way mathematics works: in
+fact, part of the point is to \emph{develop} the kinds of reasoning
+and proof skills required to understand and prove our results. The
+organization of the text follows mathematical convention, for one
+reason: these conventions have been developed because clarity and
+precision are especially important, and so, e.g., it is critical to
+know when something is asserted as the conclusion of an argument, is
+offered as a reason for something else, or is intended to introduce
+new vocabulary. So we follow mathematical convention and label
+passages as ``definitions'' if they are used to introduce new
 terminology or symbols; and as ``theorems,'' ``propositions,''
-``lemmas,'' or ``corollaries'' when we record a result or
-finding.\footnote{The difference between the latter four is not
-  terribly important, but roughly: A theorem is an important result. A
-  proposition is a result worth recording, but perhaps not as
-  important as a theorem. A lemma is a result we mainly record only
-  because we want to break up a proof into smaller, easier to manage
-  chunks. A corollary is a result that follows easily from a theorem
-  or proposition, such as an interesting special case.}  Other than
-these conventions, we will only use the methods of logical proof as
-they should be familiar from a first logic course, with one exception:
-we will make extensive use of the method of \emph{induction} to prove
-results. A chapter of the appendix is devoted to this principle.
+``lemmas,'' or ``corollaries'' when we record a result or finding.
+Other than these conventions, we will use the methods of logical proof
+that may already be familiar from a first logic course, and we will
+also make extensive use of the method of \emph{induction} to prove
+results. Two chapters of the appendix are devoted to these proof
+methods.
 
