--- a/phil379-config.sty
+++ b/phil379-config.sty
@@ -34,8 +34,4 @@
 
 \tagtrue{probAnd,probIf,probAll}
 
-% Which proof system?  Not sure yet, let's use natural deduction for
-% now. prfND is on by default, we just have to supress includion of
-% the sequent calculus.
-
-\tagfalse{prfSC}
+\tagtrue{prfND,prfSC}
