--- a/phil379-screen.tex
+++ b/phil379-screen.tex
@@ -16,6 +16,7 @@
 \RequirePackage{gitinfo2}
 
 \RequirePackage[pdftex,breaklinks,bookmarks,bookmarksopen,bookmarksopenlevel=1,colorlinks,urlcolor=dark-gray,linkcolor=reflex-blue]{hyperref}
+\usepackage[numbered]{bookmark}
 
 \usepackage[nonumberlist,toc,style=index]{glossaries}
 \makeglossaries
@@ -166,7 +167,7 @@
 \par\noindent
 \vskip 1.5cm
 \normalfont\fontsize{16pt}{0pt}\selectfont\bfseries\sffamily%
-\hfill Fall 2017 %\textit{bis}
+\hfill Fall 2017$\beta$ %\textit{bis}
 \end{textblock*}
 \
 
