--- a/include/summary-10.tex
+++ b/include/summary-10.tex
@@ -1,34 +1,35 @@
-A \emph{Turing machine} is a kind of idealized computation
-mechanism. It consists of a one-way infinite \emph{tape}, divided into
-squares, each of which can contain a \emph{symbol} from a
-pre-determined alphabet. The machine operates by moving a
-\emph{read-write head} along the tape. It may also be in one of a
-pre-determined number of \emph{states}. The actions of the read-write
-head are determined by a set of instructions; each instruction is
-conditional on the machine being in a certain state and reading a
-certain symbol, and specifies which symbol the machine will write onto
-the current square, whether it will move the read-write head one
-square left, right, or stay put, and which state it will switch to.
-If the tape contains a certain \emph{input}, represented as a sequence
-of symbols on the tape, and the machine is put into the designated
-start state with the read-write head reading the leftmost square of
-the input, the instruction set will step-wise determine a sequence of
-\emph{configurations} of the machine: content of tape, position of
-read-write head, and state of the machine. Should the machine
-encounter a configuration in which the instruction set does not
-contain an instruction for the current symbol read/state combination,
-the machine \emph{halts}, and the content of the tape is the
-\emph{output}.
+The \emph{completeness theorem} is the converse of the \emph{soundness
+  theorem}. In one form it states that if $\Gamma \Entails !A$ then
+$\Gamma \Proves !A$, in another that if $\Gamma$ is consistent then it
+is satisfiable. We proved the second form (and derived the first from
+the second). The proof is involved and requires a number of steps. We
+start with a consistent set~$\Gamma$. First we add infinitely many
+new constant symbols~$c_i$ as well as formulas of the form
+$\lexists[x][!A(x)] \lif !A(c)$ where each formula~$!A(x)$ with a free
+variable in the expanded language is paired with one of the new
+constants. This results in a \emph{saturated} consistent set of
+sentences containing~$\Gamma$. It is still consistent. Now we take
+that set and extend it to a \emph{complete consistent set}. A
+complete consistent set has the nice property that for any
+sentence~$!A$, either $!A$ or $\lnot !A$ is in the set (but never
+both). Since we started from a saturated set, we now have a saturated,
+complete, consistent set of sentences~$\Gamma^*$ that
+includes~$\Gamma$. From this set it is now possible to define a
+structure~$\Struct{M}$ such that $\Sat{M(\Gamma^*)}{!A}$ iff
+$!A \in \Gamma^*$. In particular, $\Sat{M(\Gamma^*)}{\Gamma}$, i.e.,
+$\Gamma$ is satisfiable. If $=$ is present, the construction is
+slightly more complex.
 
-Numbers can very easily be represented as sequences of strokes on the
-Tape of a Turing machine. We say a function $\Nat \to \Nat$ is
-\emph{Turing computable} if there is a Turing machine which, whenever
-it is started on the unary representation of~$n$ as input, eventually
-halts with its tape containing the unary representation of~$f(n)$ as
-output. Many familiar arithmetical functions are easily (or
-not-so-easily) shown to be Turing computable. Many other models of
-computation other than Turing machines have been proposed; and it has
-always turned out that the arithmetical functions computable there are
-also Turing computable. This is seen as support for the
-\emph{Church-Turing Thesis}, that every arithmetical function that can
-effectively be computed is Turing computable.
+Two important corollaries follow from the completeness theorem. The
+\emph{compactness theorem} states that $\Gamma \Entails !A$ iff
+$\Gamma_0 \Entails !A$ for some finite $\Gamma_0 \subseteq \Gamma$. An
+equivalent formulation is that $\Gamma$ is satisfiable iff every
+finite $\Gamma_0 \subseteq \Gamma$ is satisfiable. The compactness
+theorem is useful to prove the existence of structures with certain
+properties. For instance, we can use it to show that there are
+infinite models for every theory which has arbitrarily large finite
+models. This means in particular that finitude cannot be expressed in
+first-order logic. The second corollary, the \emph{L\"owenheim-Skolem
+  Theorem}, states that every satisfiable $\Gamma$ has a countable
+model. It in turn shows that uncountability cannot be expressed in
+first-order logic.
