add cover to README, createspace cover source, full CC BY license text

--- a/phil379-screen.tex
+++ b/phil379-screen.tex
@@ -137,7 +137,7 @@
 %  citecolor=dkleadbeater,
 %  urlcolor=dkleadbeater,
   pdftitle={Sets, Logic, Computation},
-  pdfauthor = {Open Logic Project}
+  pdfauthor = {Richard Zach, Open Logic Project}
 }
 
 % load glossary entries
@@ -167,7 +167,7 @@
 \par\noindent
 \vskip 1.5cm
 \normalfont\fontsize{16pt}{0pt}\selectfont\bfseries\sffamily%
-\hfill Fall 2017$\beta$ %\textit{bis}
+\hfill Fall 2017%$\beta$ %\textit{bis}
 \end{textblock*}
 \
 
