\defined, \undefined -> \fdefined, \fundefined

--- a/cover-lulu-quarto.tex
+++ b/cover-lulu-quarto.tex
@@ -19,9 +19,9 @@
 \definecolor{leadbeater}{RGB}{248,154,14}
 
 % lulu.com's instructions:
-% Spine width: 44.108 Postscript points wide (1.556 cm) (184 px)
+% Spine width: 59.351 Postscript points wide (2.094 cm) (247 px)
 % Spine begins 545 Postscript points (19.224 cm) (2271 px) from the left.
-% Total cover width: 1127.622 X 715 Postscript points (39.775 cm X 25.220 cm) (4698px X 2979px)
+% Total cover width: 1149.351 X 715 Postscript points (40.541 cm X 25.220 cm) (4789px X 2979px)
 
 \newlength{\coverheight}
 \newlength{\coverwidth}
@@ -30,8 +30,8 @@
 \newlength{\coverpos} % front cover starts here, width = \spinepos
 
 \setlength{\coverheight}{715bp}
-\setlength{\coverwidth}{1134.108bp}
-\setlength{\spinewidth}{44.108bp}
+\setlength{\coverwidth}{1149.351bp}
+\setlength{\spinewidth}{59.351bp}
 \setlength{\spinepos}{545bp}
 
 % \coverpos = \spinepso + \spinewidth
@@ -89,9 +89,12 @@
     \end{raggedright}
     \noindent\vskip2cm\includegraphics[width=.8\spinepos]{illustrations/Cover}
     \par\noindent
-    \vskip 2cm
-    \normalfont\fontsize{18pt}{0pt}\selectfont\bfseries\sffamily%
-    \hfill Fall 2017 
+    \vskip 1.5cm
+    \includegraphics[width=1cm]{assets/cc.pdf}
+    \includegraphics[width=1cm]{assets/by.pdf}
+    \includegraphics[width=1cm]{assets/remix.pdf}
+    \normalfont\fontsize{16pt}{0pt}\selectfont\bfseries\sffamily%
+    \hfill Fall 2017 \textit{bis}
   \end{minipage}
   \hfil
   \end{textblock*}
@@ -114,6 +117,7 @@ the Open Logic Project (openlogicproject.org), used under a Creative
 Commons Attribution 4.0 International License.
 \end{minipage}
 \hfill\color{black}
+%\colorbox{white}{\includegraphics[width=1.75in]{isbn_barcode}}
 \includegraphics[width=2.7cm]{\olpath/assets/logos/openlogic-logo-bw}
 \vspace*{1cm}
   \end{minipage}
