--- a/include/summary-3.tex
+++ b/include/summary-3.tex
@@ -20,7 +20,8 @@ and $(f^{-1} \circ f)$ is the identity function.
 
 If we relax the requirement that $f$ must have a value for every $x
 \in X$, we get the notion of a \emph{partial functions}. If $f\colon
-X \pto Y$ is partial, we say $f(x)$ is \emph{defined}, $f(x) \defined$
-if $f$ has a value for argument~$x$. Any (partial) function~$f$ is
-associated with the \emph{graph}~$R_f$ of $f$, the relation that holds
-iff $f(x) = y$.
+X \pto Y$ is partial, we say $f(x)$ is \emph{defined},
+$f(x) \fdefined$ if $f$ has a value for argument~$x$, and otherwise we
+say that $f(x)$ is \emph{undefined}, $f(x) \fundefined$. Any (partial)
+function~$f$ is associated with the \emph{graph}~$R_f$ of $f$, the
+relation that holds iff $f(x) = y$.
