--- a/phil379.tex
+++ b/phil379.tex
@@ -89,7 +89,7 @@ Dana H\"agg, \emph{University of Calgary}
 
 \vfill
 
-\textsc{Fall 2017}%$\beta$ %\textit{bis}
+\textsc{Fall 2017} \textit{bis}
 
 \end{raggedleft}
 
