--- a/phil379-screen.tex
+++ b/phil379-screen.tex
@@ -28,6 +28,7 @@
 
 \usepackage[sfdefault]{universalis}
 \usepackage[osf]{Baskervaldx} % oldstyle figures
+
 \usepackage[bigdelims,baskervaldx]{newtxmath} 
 \usepackage[cal=boondoxo]{mathalfa}
 
@@ -167,7 +168,7 @@
 \par\noindent
 \vskip 1.5cm
 \normalfont\fontsize{16pt}{0pt}\selectfont\bfseries\sffamily%
-\hfill Fall 2017%$\beta$ %\textit{bis}
+\hfill Fall 2017 \textit{bis}
 \end{textblock*}
 \
 
