don't include axiomatic deduction

--- a/phil379-envs.sty
+++ b/phil379-envs.sty
@@ -203,3 +203,9 @@
 
 \newenvironment{defish}{\begin{mdframed}[style=defishstyle]\noindent}{\end{mdframed}}
 
+% - `derivation`: for derivations, a tabular environment with three
+% colums for line number, formula, and justification.
+
+\newenvironment{derivation}{%
+  \smallskip\par\begin{tabular}{@{}rll@{}}}{
+  \end{tabular}\smallskip\par\noindent}
