--- a/phil379.tex
+++ b/phil379.tex
@@ -166,7 +166,7 @@ Computation}}}
 \cleartoverso
 \thispagestyle{empty}
 \ \vfill
-\noindent\hskip-1cm\includegraphics{illustrations/SkolemChapter}
+\noindent\includegraphics[width=\textwidth]{illustrations/SkolemChapter}
 \vfill
 
 \input{include/preface}
@@ -176,7 +176,7 @@ Computation}}}
 
 \thispagestyle{empty}
 \ \vfill
-\noindent\hskip-1cm\includegraphics{illustrations/CantorChapter}
+\noindent\includegraphics[width=\textwidth]{illustrations/CantorChapter}
 \vfill
 
 \mainmatter
@@ -189,7 +189,7 @@ Computation}}}
 \ifodd\value{page}\stepcounter{page}\fi
 \thispagestyle{empty}
 \ \vfill
-\noindent\hskip-1cm\includegraphics{illustrations/GodelChapter}
+\noindent\includegraphics[width=\textwidth]{illustrations/GodelChapter}
 \vfill
 
 \olimport*[first-order-logic]{first-order-logic}
@@ -198,7 +198,7 @@ Computation}}}
 \ifodd\value{page}\stepcounter{page}\fi
 \thispagestyle{empty}
 \ \vfill
-\noindent\hskip-1cm\includegraphics{illustrations/TuringChapter}
+\noindent\includegraphics[width=\textwidth]{illustrations/TuringChapter}
 \vfill
 
 \olimport*[turing-machines]{turing-machines}
@@ -209,7 +209,7 @@ Computation}}}
 \ifodd\value{page}\stepcounter{page}\fi
 \thispagestyle{empty}
 \ \vfill
-\noindent\hskip-1cm\includegraphics{illustrations/NoetherChapter}
+\noindent\includegraphics[width=\textwidth]{illustrations/NoetherChapter}
 \vfill
 
 \appendix
