book layout now in main openlogic repo

--- a/phil379.tex
+++ b/phil379.tex
@@ -10,158 +10,7 @@
 
 \frontmatter
 
-% bastard title
-
-\pagestyle{empty}
-
-\vspace*{100pt}
-
-\begin{raggedleft}
-{\fontsize{24pt}{24pt}\selectfont\bfseries\sffamily%
-  Sets, Logic, Computation}
-\end{raggedleft}
-
-
-\newpage
-
-% editorial board
-
-\vspace*{100pt}
-
-{\bfseries\itshape The Open Logic Project}
-
-\bigskip
-
-\textbf{\color{leadbeater}Instigator}
-
-\medskip
-
-Richard Zach, \emph{University of Calgary}
-
-\bigskip
-
-\textbf{\color{leadbeater}Editorial Board}
-
-\medskip
-
-Aldo Antonelli,$^\dagger$ \emph{University of California, Davis}
-
-Andrew Arana, \emph{Universit\'e Paris I Panth\'enon--Sorbonne}
-
-Jeremy Avigad, \emph{Carnegie Mellon University}
-
-Walter Dean, \emph{University of Warwick}
-
-Gillian Russell, \emph{University of North Carolina}
-
-Nicole Wyatt, \emph{University of Calgary}
-
-Audrey Yap, \emph{University of Victoria}
-
-\bigskip
-
-\textbf{\color{leadbeater}Contributors}
-
-\medskip
-
-Samara Burns, \emph{University of Calgary}
-
-Dana H\"agg, \emph{University of Calgary}
-
-\newpage
-
-% title
-
-\vspace*{100pt}
-
-\begin{raggedleft}
-
-{\fontsize{24pt}{24pt}\selectfont\bfseries\sffamily%
-  Sets, Logic, Computation}
-
-\smallskip
-
-{\fontsize{18pt}{18pt}\selectfont\bfseries\itshape An Open Logic Text}
-
-\vspace{100pt}
-
-\fontsize{14pt}{14pt}\selectfont Remixed by Richard Zach
-
-\vfill
-
-\textsc{Fall 2017} \textit{bis}
-
-\end{raggedleft}
-
-
-\newpage
-
-% credits
-
-\noindent
-The Open Logic Project would like to acknowledge the generous support
-of the \href{http://arts.ucalgary.ca/}{Faculty of Arts} and
-the \href{http://www.ucalgary.ca/taylorinstitute/}{Taylor Institute of
-Teaching and Learning} of the University of Calgary.
-
-\bigskip
-
-\noindent\includegraphics[height=1cm]{ucarts-color}
-
-\medskip
-
-\noindent\includegraphics[height=1cm]{ti-color}
-
-\bigskip\noindent
-This resource was funded by the \href{http://albertaoer.com}{Alberta
-Open Educational Resources (ABOER) Initiative}, which is made possible
-through an investment from the Alberta government.
-
-\noindent\includegraphics[width=4cm]{aboer-color}
-
-\vfill
-
-% copyright
-
-\noindent Illustrations by \href{http://mattleadbeater.com}{Matthew
-  Leadbeater}, used under a
-\href{http://creativecommons.org/licenses/by-nc/4.0/}{Creative Commons
-  Attribution-NonCommercial 4.0 International License}.
-
-\vfill
-
-\noindent Typeset in Baskervald X and Universalis ADF Standard by
-\LaTeX.
-
-\vfill
-
-\noindent This version of \texttt{phil379} is revision \gitAbbrevHash{}
-(\gitAuthorDate), with content generated
-from \texttt{OpenLogicProject} revision
-\input{olprevision}
-
-\vfill
-
-% oluselicense generates a license mark that a) licenses the result
-% under a CC-BY licence and b) acknowledges the original source (the
-% OLP). Acknowledgment of the source is a requirement under the
-% conditions of the CC-BY license used by the OLP, but you are not
-% required to license the product itself under CC-BY.
-
-\renewcommand{\ollicensefont}{\fontsize{9pt}{12pt}\selectfont}
-
-\noindent
-\oluselicense
-% Title of this version of the OLT with link to source
-{\href{https://github.com/rzach/phil379}{\textit{Sets, Logic,
-Computation}}}
-% Author of this version
-{\href{http://richardzach.org/}{Richard Zach}}
-
-\newpage
-\pagestyle{leadbeater}
-\currentpdfbookmark{Table of Contents}{name}
-\tableofcontents*
+\OLPfrontmatter
 
 \cleartoverso
 \thispagestyle{empty}
@@ -180,8 +29,6 @@ Computation}}}
 \vfill
 
 \mainmatter
-
-\pagestyle{leadbeater}
 
 \olimport*[sets-functions-relations]{sets-functions-relations}
 
