--- a/phil379-print.tex
+++ b/phil379-print.tex
@@ -1,109 +1,17 @@
 % phil379-print.tex
 %
-% driver file phil379-screen.tex to produce text on Crown Quarto
-% size but all b/w for printing, and no cover
+% driver file phil379-print.tex to produce the Logic III textbook for
+% printing on KDPs's quarto stock.
 
-% We use the memoir class for maximal flexibility of layout, but any
-% class will do
+\pdfminorversion=3
 
-\documentclass[11pt,openany]{memoir}
-
-\RequirePackage{amsthm}
-\RequirePackage{xcolor}
-\RequirePackage[usetwoside=false]{mdframed}
-\RequirePackage[full]{textcomp}
-\RequirePackage{gitinfo2}
-
-\RequirePackage[pdftex,breaklinks,bookmarks,bookmarksopen,bookmarksopenlevel=1,colorlinks,urlcolor=dark-gray,linkcolor=reflex-blue]{hyperref}
+\documentclass[print]{../../sty/open-logic-book}
 
 \usepackage[nonumberlist,toc,style=index]{glossaries}
 \makeglossaries
 
-% let's set the whole thing in Baskervald X, with Universalis ADF
-% Standard for sans-serif, and spread the lines a bit to make the text
-% more readable
-
-\usepackage[sfdefault]{universalis}
-\usepackage[osf]{Baskervaldx} % oldstyle figures
-\usepackage[bigdelims,baskervaldx]{newtxmath} 
-\usepackage[cal=boondoxo]{mathalfa}
-
-% Make sure we have a copyright symbol
-
-\def\copyright{\textcircled{C}}
 
 \def\oljobname{phil379}
-
-% next line needed for Adobe Acrobat to open the PDF. may have
-% something to do with transparency in the PNG graphics files?
-
-\pdfminorversion=4
-
-% set stock & paper size to Createspace Crown Quarto dimensions (.25in bleed)
-
-\setstocksize{10.19in}{7.94in}
-\settrimmedsize{9.69in}{7.44in}{*}
-\settrims{.25in}{.25in}
-
-% let's calculate the line length for 65 characters in \normalfont
-
-\setlxvchars
-
-% set the size of the type block to golden ratio calculated width
-
-\settypeblocksize{*}{1.05\lxvchars}{1.62}
-
-% set spine and and edge margin
-
-\setlrmargins{*}{*}{1.3}
-\setulmargins{90pt}{*}{*}
-\setheaderspaces{*}{*}{1}
-
-\checkandfixthelayout
-
-% Chapter style
-
-\makeatletter
-
-\colorlet{leadbeater}{black}
-\colorlet{dkleadbeater}{black}
-\colorlet{ltleadbeater}{black!5}
-\newlength{\barlength}
-\makechapterstyle{leadbeater}{%
-  \setlength{\afterchapskip}{40pt}
-  \setlength{\beforechapskip}{50pt}
-    \setlength{\midchapskip}{10pt}
-  \renewcommand*{\afterchapternum}{\par\nobreak\vskip 0pt}
-  \renewcommand*{\chapnamefont}{\fontsize{14pt}{0pt}\selectfont\bfseries\sffamily}
-  \renewcommand*{\chapnumfont}{\fontsize{14pt}{0pt}\selectfont\bfseries\sffamily}
-  \renewcommand*{\chaptitlefont}{\normalfont\fontsize{48pt}{48pt}\selectfont\bfseries\itshape\color{leadbeater}}
-  \renewcommand*{\printchaptername}{%
-    \chapnamefont\MakeUppercase{\@chapapp}}
-  \renewcommand*{\printchaptertitle}[1]{%
-    \chaptitlefont ##1\\[-\baselineskip]%
-    \hspace*{-20pt}%
-    \smash{\color{leadbeater}\rule{7pt}{350pt}}}
-}
-
-\renewcommand*{\partnamefont}{\fontsize{24pt}{0pt}\selectfont\bfseries\sffamily}
-\renewcommand*{\partnumfont}{\fontsize{24pt}{0pt}\selectfont\bfseries\sffamily}
-\renewcommand*{\parttitlefont}{\normalfont\fontsize{54pt}{54pt}\selectfont\bfseries\itshape\color{leadbeater}}
-\renewcommand*{\printpartname}{%
-  \partnamefont PART}
-
-\makeatother
-
-\chapterstyle{leadbeater}
-
-\copypagestyle{leadbeater}{headings}
-
-\makeevenhead{leadbeater}{\color{leadbeater}\sffamily\bfseries\thepage}{}
-             {\small\sffamily\color{leadbeater}\leftmark}
-\makeoddhead{leadbeater}{\small\sffamily\color{leadbeater}\rightmark}{}
-            {\color{leadbeater}\sffamily\bfseries\thepage}
-
-\usepackage[font={small,it}]{caption}
-
 
 % \olpath has to point to the location of the OLP main
 % directory/folder.  We're compiling from subdirectory
@@ -117,17 +25,11 @@
 
 \input{\olpath/sty/open-logic.sty}
 
+\input{phil379-metadata}
+
 % we want all the problems deferred to the very end
 
 \input{\olpath/sty/open-logic-defer.sty}
-
-% use high-res versions of photos
-
-\tagfalse{olphotos-lowres}
-
-% all links plain black for printing
-
-\hypersetup{hidelinks}
 
 % load glossary entries
 
@@ -142,4 +44,3 @@
 \input{phil379}
 
 \end{document}
-
