--- a/phil379-screen.tex
+++ b/phil379-screen.tex
@@ -4,111 +4,16 @@
 % with same type block as in printed version, but but with on-screen
 % features (color, links, etc).
 
-% We use the memoir class for maximal flexibility of layout, but any
-% class will do
+\documentclass[screen]{../../sty/open-logic-book}
 
-\documentclass[11pt,openany]{memoir}
-
-\RequirePackage{amsthm}
-\RequirePackage{xcolor}
-\RequirePackage{mdframed}
-\RequirePackage[full]{textcomp}
-\RequirePackage{gitinfo2}
+\definecolor{OLPcolor}{RGB}{248,154,14}
+\definecolor{OLPdkcolor}{RGB}{104,65,6}
+\definecolor{OLPltcolor}{RGB}{248,203,137}
 
 \usepackage[nonumberlist,toc,style=index]{glossaries}
 \makeglossaries
 
-% let's set the whole thing in Baskervald X, with Universalis ADF
-% Standard for sans-serif, and spread the lines a bit to make the text
-% more readable
-
-\usepackage[sfdefault]{universalis}
-\usepackage[osf]{Baskervaldx} % oldstyle figures
-
-\usepackage[bigdelims,baskervaldx]{newtxmath} 
-\usepackage[cal=boondoxo]{mathalfa}
-
-% Make sure we have a copyright symbol
-
-\def\copyright{\textcircled{C}}
-
 \def\oljobname{phil379}
-
-% next line needed for Adobe Acrobat to open the PDF. may have
-% something to do with transparency in the PNG graphics files?
-
-\pdfminorversion=4
-
-% load textpos for the cover
-
-\usepackage[absolute,overlay]{textpos}
-
-% set stock & paper size with narrow margins
-
-\setstocksize{8in}{5in}
-
-\settrimmedsize{\stockheight}{\stockwidth}{*}
-\settrims{0pt}{0pt}
-
-% let's calculate the line length for 65 characters in \normalfont
-
-\setlxvchars
-
-% set the size of the type block to golden ratio calculated width
-
-\settypeblocksize{*}{1.05\lxvchars}{1.62}
-
-% set spine and and edge margin
-
-\setlrmargins{*}{*}{1}
-\setulmargins{.6in}{*}{*}
-\setheaderspaces{*}{*}{1}
-
-\checkandfixthelayout
-
-% Chapter style
-
-\makeatletter
-
-\definecolor{leadbeater}{RGB}{248,154,14}
-\definecolor{dkleadbeater}{RGB}{104,65,6}
-\definecolor{ltleadbeater}{RGB}{248,203,137}
-\newlength{\barlength}
-\makechapterstyle{leadbeater}{%
-  \setlength{\afterchapskip}{40pt}
-  \setlength{\beforechapskip}{50pt}
-    \setlength{\midchapskip}{10pt}
-  \renewcommand*{\afterchapternum}{\par\nobreak\vskip 0pt}
-  \renewcommand*{\chapnamefont}{\fontsize{14pt}{0pt}\selectfont\sffamily\bfseries}
-  \renewcommand*{\chapnumfont}{\fontsize{14pt}{0pt}\selectfont\sffamily\bfseries}
-  \renewcommand*{\chaptitlefont}{\normalfont\fontsize{48pt}{48pt}\selectfont\bfseries\itshape\color{leadbeater}}
-  \renewcommand*{\printchaptername}{%
-    \chapnamefont\MakeUppercase{\@chapapp}}
-  \renewcommand*{\printchaptertitle}[1]{%
-    \chaptitlefont ##1\\[-\baselineskip]%
-    \hspace*{-20pt}%
-    \smash{\color{leadbeater}\rule{0pt}{300pt}}}
-}
-
-\renewcommand*{\partnamefont}{\fontsize{24pt}{0pt}\selectfont\sffamily\bfseries}
-\renewcommand*{\partnumfont}{\fontsize{24pt}{0pt}\selectfont\sffamily\bfseries}
-\renewcommand*{\parttitlefont}{\normalfont\fontsize{54pt}{54pt}\selectfont\bfseries\itshape\color{leadbeater}}
-\renewcommand*{\printpartname}{%
-  \partnamefont PART}
-
-\makeatother
-
-\chapterstyle{leadbeater}
-
-\copypagestyle{leadbeater}{headings}
-
-\makeoddhead{leadbeater}{\small\sffamily\color{leadbeater}\rightmark}{}
-            {\color{leadbeater}\sffamily\bfseries\thepage}
-
-\makeevenhead{leadbeater}{\small\sffamily\color{leadbeater}\leftmark}{}
-            {\color{leadbeater}\sffamily\bfseries\thepage}
-
-\usepackage[font={small,it}]{caption}
 
 
 % \olpath has to point to the location of the OLP main
@@ -123,11 +28,7 @@
 
 \input{\olpath/sty/open-logic.sty}
 
-\hypersetup{allcolors=dkleadbeater,
-  pdftitle={Sets, Logic, Computation},
-  pdfauthor = {Richard Zach, Open Logic Project}}
-
-\RequirePackage[numbered]{bookmark}
+\input{phil379-metadata}
 
 % we want all the problems deferred to the very end
 
@@ -140,39 +41,10 @@
 % end preamble
 
 \begin{document}
+\raggedbottom
 
-% First we make a titlepage
-
-\thispagestyle{empty}
-
-  \pagecolor{leadbeater}
-  \begin{textblock*}{4.5in}(.25in,.75in)%
-    \begin{raggedright}
-      \fontsize{26pt}{30pt}\selectfont\bfseries\sffamily%
-      Sets, Logic, Computation\\
-      \normalfont\fontsize{18pt}{0pt}\selectfont\bfseries\itshape%
-      \rule{4.5in}{5pt}\\[5pt]
-      An Open Logic Text
-
-
-    \vskip1.5cm
-
-    \includegraphics[scale=.7]{illustrations/Cover}
-
-    \vskip 1.5cm
-    \noindent
-    \includegraphics[width=1cm]{assets/cc.pdf}
-    \includegraphics[width=1cm]{assets/by.pdf}
-    \includegraphics[width=1cm]{assets/remix.pdf}
-    \normalfont\fontsize{16pt}{0pt}\selectfont\bfseries\sffamily%
-    \hfill Fall 2017 \textit{bis}
-    \end{raggedright}
-\end{textblock*}
-\
-
-\clearpage
-\setcounter{page}{1}
-\nopagecolor
+\OLPscreencover{\noindent\hfill\includegraphics[scale=.55]{illustrations/Cover}\hfill
+}
 
 % Now load the actual text
 
