swicth to new books class

--- a/include/glossary.tex
+++ b/include/glossary.tex
@@ -54,7 +54,7 @@
   name = {sequence (infinite) },
   symbol = {\ensuremath{X^\omega}},
   description = {A gapless, unending sequence of {element}s of~$X$;
-    formally, a function $s\colon \Int^+ \to X$ (see
+    formally, a function $s\colon \PosInt \to X$ (see
     \olref[sfr][set][set]{sec})}}
 
 \newglossaryentry{ps} {
