--- a/include/summary-4.tex
+++ b/include/summary-4.tex
@@ -4,7 +4,7 @@ are infinite, things are more complicated. The first level of
 infinity is that of \emph{countably infinite} sets. A set~$X$ is
 countable if its elements can be arranged in an \emph{enumeration}, a
 one-way infinite, possibly gappy list, i.e., when there is a
-surjective function~$f\colon \Int^+ \pto X$. It is countably infinite
+surjective function~$f\colon \PosInt \pto X$. It is countably infinite
 if it is countable but not finite. Cantor's \emph{zig-zag method}
 shows that the sets of pairs of elements of countably infinite sets is
 also countable; and this can be used to show that even the set of
@@ -32,6 +32,6 @@ them. We can also define that $X$ is no larger than~$Y$ ($\card{X} \le
 $Y$. By the Schr\"oder-Bernstein Theorem, this in fact provides a
 sizewise order of infinite sets. Finally, \emph{Cantor's theorem}
 says that for any $X$, $\card{X} < \card{\Pow{X}}$. This is a
-generalization of our result that $\Pow{\Int^+}$ is uncountable, and
+generalization of our result that $\Pow{\PosInt}$ is uncountable, and
 shows that there are not just two, but infinitely many levels of
 infinity.
