--- a/phil379-metadata.tex
+++ b/phil379-metadata.tex
@@ -1,6 +1,6 @@
 % Metadata for phil379
 
-\setOLPbooktitle{Sets, Logic, Computation}
+\setOLPbooktitle[Sets, Logic\rlap{,}\\ Computation]{Sets, Logic, Computation}
 \setOLPbooksubtitle{An Open Introduction to Metalogic}
 \setOLPauthor{Richard Zach}
 \setOLPbookversion{Fall 2019\textalpha}{F19\textalpha}
