--- a/phil379-print-cover.tex
+++ b/phil379-print-cover.tex
@@ -2,7 +2,7 @@
 
 % make a cover PDF for KDP Crown Quarto booksize.
 
-%\pdfminorversion=4
+\pdfminorversion=4
 
 \documentclass[cover]{../../sty/open-logic-book}
 
