--- a/phil379-screen.tex
+++ b/phil379-screen.tex
@@ -43,7 +43,16 @@
 \begin{document}
 \raggedbottom
 
-\OLPscreencover{\noindent\hfill\includegraphics[scale=.55]{illustrations/Cover}\hfill
+\OLPscreencover{\hfill\includegraphics[width=.29\textwidth]{\olpath/assets/portraits/cantor-circle.pdf}\hfill{}
+
+\hfill{}
+\includegraphics[width=.29\textwidth]{\olpath/assets/portraits/goedel-circle.pdf}
+\hfil\includegraphics[width=.29\textwidth]{\olpath/assets/portraits/turing-circle.pdf}\hfil{}
+\includegraphics[width=.29\textwidth]{\olpath/assets/portraits/skolem-circle.pdf}
+\hfill{}
+
+\hfill{}
+\includegraphics[width=.29\textwidth]{\olpath/assets/portraits/noether-circle.pdf}\hfill{}
 }
 
 % Now load the actual text
